# OnyxAgent

./: .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  app.py  config-template.json  config.py  hf-entrypoint.sh  pyproject.toml  requirements-optional.txt  requirements.txt  run.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1.bug.yml  2.feature.yml  config.yml
.github/workflows/: deploy-image-arm.yml  deploy-image.yml
agent/evolution/: __init__.py
agent/memory/: config.py  conversation_store.py  service.py
agent/orchestration/: __init__.py  runner.py
agent/prompt/: builder.py  workspace.py
agent/protocol/: agent_stream.py
agent/skills/: frontmatter.py  loader.py
agent/tools/: __init__.py  tool_manager.py
bridge/: agent_bridge.py  agent_initializer.py
channel/: chat_channel.py
channel/dingtalk/: dingtalk_channel.py  dingtalk_message.py
channel/discord/: discord_channel.py  discord_message.py
channel/feishu/: feishu_channel.py  feishu_message.py
channel/qq/: qq_channel.py  qq_message.py
channel/slack/: slack_channel.py  slack_message.py
channel/telegram/: telegram_channel.py  telegram_message.py
cli/: __init__.py  cli.py  utils.py
common/: cloud_client.py  i18n.py
docker/: Dockerfile.latest  build.latest.sh  docker-compose.yml  entrypoint.sh
docs/: docs.json  vercel.json
models/: custom_provider.py  openai_compatible_bot.py
plugins/: README.md  source.json
scripts/: run.ps1  shutdown.sh
skills/: README.md
tests/: test_evolution.py  test_invariant_bash.py  test_qianfan_provider.py
(+226 files in other folders)
